creacion de clases

--- a/v1/src/main/resources/templates/home/index.html
+++ b/v1/src/main/resources/templates/home/index.html
@@ -224,6 +224,8 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/index/estudiantes}">Inscripción de Estudiantes</a></li>
                         <li><a class="dropdown-item" th:href="@{/index/instructores}">Inscripción de Instructor</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index/clases}">Clases</a></li>
+
                     </ul>
                 </li>
 
