resgistro de clases y de estudiantes

--- a/v1/src/main/resources/templates/home/index.html
+++ b/v1/src/main/resources/templates/home/index.html
@@ -224,7 +224,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/index/estudiantes}">Inscripción de Estudiantes</a></li>
                         <li><a class="dropdown-item" th:href="@{/index/instructores}">Inscripción de Instructor</a></li>
-                        <li><a class="dropdown-item" th:href="@{/index/clases}">Clases</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index/clases}">Registro de Clases</a></li>
 
                     </ul>
                 </li>
@@ -237,7 +237,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/index/clases/estudiantes}">Estudiantes</a></li>
                         <li><a class="dropdown-item" th:href="@{/index/clases/instructores}">Instructor</a></li>
-                        <li><a class="dropdown-item" th:href="@{/index/clases/calendario}">Calendario de Clases</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index/calendarioclases}">Calendario de Clases</a></li>
                     </ul>
                 </li>
             </ul>
