--- a/v1/src/main/resources/templates/home/estudiantes.html
+++ b/v1/src/main/resources/templates/home/estudiantes.html
@@ -144,19 +144,28 @@
         </button>
 
         <!-- Menú de navegación -->
+        <<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        <!-- Logo o nombre de la escuela -->
+        <a class="navbar-brand" th:href="@{/}">Escuela de Patinaje</a>
+
+        <!-- Botón del menú hamburguesa (móvil) -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Menú de navegación -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <!-- Inicio -->
+               
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/index/home}">Inicio</a>
                 </li>
 
-                <!-- Servicios -->
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/index/servicios}">Servicios</a>
                 </li>
 
-                <!-- Eventos -->
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/index/eventos}">Eventos</a>
                 </li>
@@ -181,6 +190,8 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/index/estudiantes}">Inscripción de Estudiantes</a></li>
                         <li><a class="dropdown-item" th:href="@{/index/instructores}">Inscripción de Instructor</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index/clases}">Registro de Clases</a></li>
+
                     </ul>
                 </li>
 
@@ -192,7 +203,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/index/clases/estudiantes}">Estudiantes</a></li>
                         <li><a class="dropdown-item" th:href="@{/index/clases/instructores}">Instructor</a></li>
-                        <li><a class="dropdown-item" th:href="@{/index/clases/calendario}">Calendario de Clases</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index/calendarioclases}">Calendario de Clases</a></li>
                     </ul>
                 </li>
             </ul>
