correcion de error navbar

--- a/v1/src/main/resources/templates/home/instructores.html
+++ b/v1/src/main/resources/templates/home/instructores.html
@@ -134,7 +134,7 @@
 <body>
 
     <!-- NAVBAR ACTUALIZADA (igual que en las otras páginas) -->
-    <<nav class="navbar navbar-expand-lg">
+     <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <!-- Logo o nombre de la escuela -->
         <a class="navbar-brand" th:href="@{/}">Escuela de Patinaje</a>
