--- a/v1/src/main/resources/templates/home/estudiantes.html
+++ b/v1/src/main/resources/templates/home/estudiantes.html
@@ -133,7 +133,7 @@
 <body>
 
     <!-- NAVBAR ACTUALIZADA (igual que en el PMV) -->
-   <nav class="navbar navbar-expand-lg">
+     <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <!-- Logo o nombre de la escuela -->
         <a class="navbar-brand" th:href="@{/}">Escuela de Patinaje</a>
@@ -165,9 +165,9 @@
                         Corporativo
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{#mision}">Misión</a></li>
-                        <li><a class="dropdown-item" th:href="@{#vision}">Visión</a></li>
-                        <li><a class="dropdown-item" th:href="@{#valores}">Valores</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index/home#mision}">Misión</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index/home#vision}">Visión</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index/home#valores}">Valores</a></li>
                     </ul>
                 </li>
 
@@ -190,15 +190,15 @@
                         Clases
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{/index/clases/estudiantes}">Estudiantes</a></li>
-                        <li><a class="dropdown-item" th:href="@{/index/clases/instructores}">Instructor</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index/listadoestudiantes}">Estudiantes</a></li>
+                        <li><a class="dropdown-item" th:href="@{/index/listadoinstructores}">Instructor</a></li>
                         <li><a class="dropdown-item" th:href="@{/index/calendarioclases}">Calendario de Clases</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
     </div>
-</nav>  
+</nav>
 
     <!-- HEADER -->
     <header>
@@ -258,8 +258,8 @@
                     <label class="form-label">Instructor Preferido</label>
                     <select class="form-control" id="instructor">
                         <option value="coach-daniela">Coach Daniela</option>
-                        <option value="maestro-javier">Maestro Javier</option>
-                        <option value="cualquiera">Indistinto</option>
+                        <option value="coach-javier">Coach Carlos</option>
+                        <option value="coach-valentina">Coach Valentina</option>
                     </select>
                 </div>
 
